# escale

./: README.md
KiCad/: Local.kicad_sym  eScale.kicad_pcb  eScale.kicad_prl  eScale.kicad_pro  eScale.kicad_sch
KiCad/Local.pretty/: 300SP1J1BLKVS2QE.STEP  300SPxxxxxxVS2xx.kicad_mod  Adafruit_MiniBoost_TPS61023.kicad_mod  BatHolder_AA2.kicad_mod  L_D13.3_d7.3_Horizontal.kicad_mod  Load_Cell_2_Click_v100.step  MikroE Click.kicad_mod  Seeed_Grove_20x40.kicad_mod
KiCad/Molex Milli-Grid/: 87833-0420.dxf  87833-0420.stp  87833-0820.dxf  87833-0820.stp  87833-0820.txt  87833-1020.dxf  87833-1020.stp  87833-1020.txt  Molex_Milli-Grid_87833-04xx.kicad_mod  Molex_Milli-Grid_87833-08xx.kicad_mod  Molex_Milli-Grid_87833-10xx.kicad_mod
KiCad/RP-Pico Libraries/: MCU_RaspberryPi_and_Boards.kicad_sym  README.md
KiCad/RP-Pico Libraries/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
escale_fw/: platformio.ini
escale_fw/src/: app_input.hpp  app_state.hpp  button.cpp  button.hpp  debug.cpp  debug.hpp  display.hpp  main.cpp  overload.hpp  overloaded.hpp  state.hpp  u8g2display.cpp  u8g2display.hpp  unit.cpp  unit.hpp  views.cpp  views.hpp
escale_fw/src/app_hal/: button.cpp  button.hpp  input_handler.hpp
escale_fw/src/app_hal/display/: display.hpp  u8g2display.cpp  u8g2display.hpp
escale_fw/src/filtering/: filter.hpp  fir_filter.cpp  fir_filter.hpp  iir_filter.cpp  iir_filter.hpp  median_filter.hpp  threshold_change_detector.hpp
escale_fw/src/run_loop/: run_loop.hpp  task.hpp
escale_fw/src/ui/: input.hpp  view.hpp  view_stack_task.hpp
escale_fw/src/ui/calibration/: calibration_task.hpp  calibration_view.cpp  calibration_view.hpp
escale_fw_rs/: Cargo.toml  README.md
escale_fw_rs/.cargo/: config.toml
escale_fw_rs/app/: Cargo.toml  build.rs
escale_fw_rs/app/src/: common.rs  dashboard.rs  flash.rs  flash_static.rs  input_scanner.rs  main.rs  run_loop.rs  ssd1306_terminal.rs  uptime.rs  uptime_delay.rs
escale_fw_rs/lib/app-core/: Cargo.toml
escale_fw_rs/lib/app-core/src/: button.rs  common.rs  dashboard.rs  input_scanner.rs  lib.rs  scale.rs  terminal.rs
escale_fw_rs/lib/ring/: Cargo.toml
escale_fw_rs/lib/ring/src/: lib.rs  ring.rs  ring_iter.rs  ring_iter_mut.rs  ring_state.rs
escale_fw_rs/lib/stuff/: Cargo.toml
escale_fw_rs/lib/stuff/src/: lib.rs  mq.rs  ring.rs  ring_state.rs  run_loop.rs  scale.rs  signal.rs  simple_ring.rs
escale_fw_rs/src/: dashboard.rs  input_scanner.rs  main.rs  run_loop.rs  uptime.rs
filter/: fir.m
(+9 files in other folders)
