[package]
name = "escale"
version = "0.1.0"
authors = ["Raman Fedaseyeu <raman.fedaseyeu@gmail.com>"]
readme = "README.md"
edition = "2021"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
embedded-time = "0.12.0"
alloc-cortex-m = "0.4.2"
panic-probe = "0.3.0"
fugit = "0.3.6"

# Board Support Package
rp-pico = "0.4.1"
# sparkfun-pro-micro-rp2040 = "0.2.0"

# When not using a BSP, use these
# rp2040-hal = { version="0.4.0", features=["rt"] }
# rp2040-boot2 = "0.2.0"

ssd1306 = "0.7.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
